@@ -17,12 +17,18 @@
     </properties>
 
     <parent>
-        <artifactId>java_chat</artifactId>
-        <groupId>ru.nsu.ccfit.zhdanov.java_chat</groupId>
+        <artifactId>chat</artifactId>
+        <groupId>ru.nsu.ccfit.zhdanov.chat</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
+        <dependency>
+            <groupId>ru.nsu.ccfit.zhdanov.java_chat</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
@@ -186,6 +192,12 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ru.nsu.ccfit.zhdanov.chat</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -197,6 +209,7 @@
                 <configuration>
                     <source>22</source>
                     <target>22</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
